Using .valueOf() for Short + Byte as well